fix misaligned tabs

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -21,10 +21,10 @@ ul.list-inline.tab-bar.inset-panel {
 tabs-bar, .tab-bar {
   height: @tab-height + @tab-top-padding + @tab-bottom-border-height;
   background: @tab-bar-background-color;
-  padding: 0 10px 0 10px;
+  padding: 0 10px 0 16px;
   box-sizing: border-box;
   border-bottom: solid 4px @tab-bar-bottom-border-color;
-  left: 6px;
+  // left: 6px;
 
   &:after {
     background: @tab-background-active;
